BACKLOG-23094: Fix Calendar picker z-index to make it usable (#2370)

--- a/war/src/main/webapp/engines/jahia-anthracite/css/components/_build.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/css/components/_build.scss
@@ -75,7 +75,7 @@ div[role="combobox"] {
 .x-date-menu {
     box-shadow: none;
     background: transparent !important;
-    z-index: 1100 !important;
+    z-index: 1501 !important;
 
     .x-date-hours-panel {
         margin-top: 22px;
